@@ -1,3 +1,11 @@
+2007-05-08    <tino@firebird.03.softkill.net>
+
+	* auxbuf.h: added
+
+2007-04-25    <tino@firebird.03.softkill.net>
+
+	* file.h (tino_file_close_ign): added
+
 2007-04-20    <tino@firebird.03.softkill.net>
 
 	* err.h (tino_verr): corrected and comment optimized
